fix(webview): show copy button in web clients
This commit refactors the UI for code blocks in chat messages to improve the placement of action buttons (copy, apply, insert) and fixes the issue where copy button is not showing up on web.

The cause of the issue is due to the logic where actionsContainer will only be displayed when previewContainer is available, a regression from https://github.com/sourcegraph/cody/pull/7217.

The fix is to always append available actionsContainer, but also insert the previewContainer before that when available.

Key changes:

- Modified CSS styles in `ChatMessageContent.module.css` to adjust padding, borders, and background colors for code blocks and buttons.
- Updated `ChatMessageContent.tsx` to insert the preview container (containing file info) before the code block and the actions container after the code block.
- Updated `create-buttons.ts` to use the default `buttonsContainer` style instead of `buttonsContainerTransparent` for both preview and action button containers.

## Test Plan

Added storybook to cover this component

--- a/vscode/webviews/chat/ChatMessageContent/ChatMessageContent.module.css
+++ b/vscode/webviews/chat/ChatMessageContent/ChatMessageContent.module.css
@@ -8,19 +8,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8px;
-    border: 1px solid var(--vscode-editor-foreground);
+    padding: calc(var(--spacing) * 0.5);
+    border: 1px solid var(--vscode-input-background);
     border-radius: 4px;
     background: transparent;
 }
 
-.buttons-container-transparent {
-    composes: buttons-container;
-    border: none;
-    padding: 4px 0;
-}
-
-.leftInfo {
+.left-info {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -29,6 +23,7 @@
 
 .stats {
     color: var(--vscode-descriptionForeground);
+    padding: calc(var(--spacing) * 0.5);
 }
 
 .buttons {
@@ -38,26 +33,28 @@
     justify-content: space-between;
 }
 
-.actionButtons {
+.action-buttons {
     display: flex;
     gap: 0.25rem;
 }
+
 .button {
     display: flex;
     align-items: center;
     padding: 3px;
     height: 20px;
-    background-color: transparent;
     cursor: pointer;
     background: var(--button-icon-background);
     border-radius: var(--button-icon-corner-radius);
     color: var(--foreground);
 }
+
 .button:hover {
     background: var(--button-icon-hover-background);
     outline: 1px dotted var(--contrast-active-border);
     outline-offset: -1px;
 }
+
 .button:not(:first-child) {
     margin-left: 0.25rem;
 }
@@ -94,6 +91,7 @@
     border-radius: var(--button-icon-corner-radius);
     color: var(--foreground);
 }
+
 .copy-button:hover,
 .insert-button:hover {
     background: var(--button-icon-hover-background);
@@ -116,7 +114,7 @@
     margin-right: 0.25rem;
 }
 
-.fileNameContainer {
+.file-name-container {
     font-size: 12px;
     color: var(--vscode-descriptionForeground);
     display: flex;
@@ -128,7 +126,6 @@
     display: flex;
     margin-left: auto;
 }
-
 
 .attribution-icon-unavailable {
     color: var(--hl-orange);
@@ -188,7 +185,6 @@
     padding: calc(var(--spacing) * 0.5);
     overflow-x: auto;
     border-bottom: none;
-    margin: 1rem 0;
     border-radius: 3px;
     border: 1px solid var(--vscode-input-background);
 }
@@ -207,6 +203,7 @@
     color: var(--code-foreground);
     margin-bottom: 0;
 }
+
 body[data-vscode-theme-kind='vscode-light'] .content pre,
 body[data-vscode-theme-kind='vscode-light'] .content pre > code {
     /* Our syntax highlighter emits colors intended for dark backgrounds only. */
@@ -257,9 +254,4 @@ body[data-vscode-theme-kind='vscode-light'] .content pre > code {
     margin-block: 1rem;
     padding-inline-start: 2rem;
     list-style: revert;
-}
-
-.file-name-container {
-    color: var(--vscode-descriptionForeground);
-    margin-left: auto;
 }
